--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -80,14 +80,14 @@
         </tr>
         <tr>
           <td>Turn on/off</td>
-          <td><input id="CheckTEC1" type="checkbox"></td>
-          <td><input id="CheckTEC2" type="checkbox"></td>
-          <td><input id="CheckTEC3" type="checkbox"></td>
-          <td><input id="CheckTEC4" type="checkbox"></td>
-          <td><input id="CheckTEC5" type="checkbox"></td>
-          <td><input id="CheckTEC6" type="checkbox"></td>
-          <td><input id="CheckTEC7" type="checkbox"></td>
-          <td><input id="CheckTEC8" type="checkbox"></td>
+          <td><input id="CheckTEC1" type="checkbox" onclick="clkCheckTec(1)"></td>
+          <td><input id="CheckTEC2" type="checkbox" onclick="clkCheckTec(2)"></td>
+          <td><input id="CheckTEC3" type="checkbox" onclick="clkCheckTec(3)"></td>
+          <td><input id="CheckTEC4" type="checkbox" onclick="clkCheckTec(4)"></td>
+          <td><input id="CheckTEC5" type="checkbox" onclick="clkCheckTec(5)"></td>
+          <td><input id="CheckTEC6" type="checkbox" onclick="clkCheckTec(6)"></td>
+          <td><input id="CheckTEC7" type="checkbox" onclick="clkCheckTec(7)"></td>
+          <td><input id="CheckTEC8" type="checkbox" onclick="clkCheckTec(8)"></td>
         </tr>
 
         <tr>
@@ -142,9 +142,6 @@
       socket.on('valve1blue', (msg) => {valve1.style.background='#ADD8E6'; });
       socket.on('valve1white', (msg) => {valve1.style.background='#FCF5E5'; });
 
-      const checktec1 = document.getElementById('CheckTEC1');
-      checktec1.addEventListener('click', (e) => {socket.emit('checktec1'); });
-
       socket.on('envString', (msg) => {
           //          console.log('envString: ', msg);
           const snumbers = msg.toString().replace('Env = ', '');
@@ -159,38 +156,29 @@
       });
 
       socket.on('Temp_MString', (msg) => {
-          //          console.log('TempMString: ', msg);
           const snumbers = msg.toString().replace('Temp_M = ', '');
           const vNumbers = snumbers.split(',');
-          document.getElementById('Temp_M1').innerHTML = parseFloat(vNumbers[0]).toFixed(2);
-          document.getElementById('Temp_M2').innerHTML = parseFloat(vNumbers[1]).toFixed(2);
-          document.getElementById('Temp_M3').innerHTML = parseFloat(vNumbers[2]).toFixed(2);
-          document.getElementById('Temp_M4').innerHTML = parseFloat(vNumbers[3]).toFixed(2);
-          document.getElementById('Temp_M5').innerHTML = parseFloat(vNumbers[4]).toFixed(2);
-          document.getElementById('Temp_M6').innerHTML = parseFloat(vNumbers[5]).toFixed(2);
-          document.getElementById('Temp_M7').innerHTML = parseFloat(vNumbers[6]).toFixed(2);
-          document.getElementById('Temp_M8').innerHTML = parseFloat(vNumbers[7]).toFixed(2);
+          for (let i = 1; i <= 8; i++) {
+              let tm = 'Temp_M' + i.toString();
+              document.getElementById(tm).innerHTML = parseFloat(vNumbers[i-1]).toFixed(2);
+          }
       });
 
       socket.on('PowerStateString', (msg) => {
           const snumbers = msg.toString().replace('PowerState = ', '');
           const vNumbers = snumbers.split(',');
-
           for (let i = 1; i <= 8; i++) {
               let ps = 'PowerState' + i.toString();
               let ct = 'CheckTEC' + i.toString();
               if (parseInt(vNumbers[i]).toFixed(0) == 1) {
                   document.getElementById(ps).innerHTML = parseInt(vNumbers[i-1]).toFixed(0);
-                  document.getElementById(ct).checked = true;             
               } else {
                   document.getElementById(ps).innerHTML = parseInt(vNumbers[i-1]).toFixed(0);
-                  document.getElementById(ct).checked = false;
               }
           }
       });
 
       socket.on('ControlVoltage_SetString', (msg) => {
-          //          console.log('ControlVoltage_Set: ', msg);
           const snumbers = msg.toString().replace('ControlVoltage_Set = ', '');
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
@@ -201,10 +189,21 @@
       });
 
       function chgControlVoltage_Set(itec, val) {
-          let cmd = "controlvoltage_set " + itec.toString() + " " + val.toString();
           let msg = "tec " + itec.toString() + " set ControlVoltage_Set " + val.toString();
-          console.log(cmd + " " + msg);
+          console.log("controlvoltage_set" + msg);
           socket.emit('controlvoltage_set', msg);
+      }
+
+      function clkCheckTec(itec) {
+          let ct = 'CheckTEC' + itec.toString();
+          let msg = "tec " + itec.toString();
+          if (document.getElementById(ct).checked) {
+              msg = msg + " cmd Power_On";
+          } else {
+              msg = msg + " cmd Power_Off";
+          }
+          console.log(ct + " " + msg);
+          socket.emit('checktec', msg);
       }
     </script>
 
