change width for fields; check for focus on all input fields

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -94,28 +94,28 @@
 
         <tr>
           <td>ControlVoltage_Set [V]</td>
-          <td> <input id="ControlVoltage_Set0" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(0,this.value)"></td>
-          <td> <input id="ControlVoltage_Set1" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(1,this.value)"></td>
-          <td> <input id="ControlVoltage_Set2" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(2,this.value)"></td>
-          <td> <input id="ControlVoltage_Set3" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(3,this.value)"></td>
-          <td> <input id="ControlVoltage_Set4" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(4,this.value)"></td>
-          <td> <input id="ControlVoltage_Set5" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(5,this.value)"></td>
-          <td> <input id="ControlVoltage_Set6" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(6,this.value)"></td>
-          <td> <input id="ControlVoltage_Set7" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(7,this.value)"></td>
-          <td> <input id="ControlVoltage_Set8" maxlength="3" size="3" value="wait" onchange="chgControlVoltage_Set(8,this.value)"></td>
+          <td> <input id="ControlVoltage_Set0" maxlength="4" size="4" value="all" onchange="chgControlVoltage_Set(0,this.value)"></td>
+          <td> <input id="ControlVoltage_Set1" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(1,this.value)"></td>
+          <td> <input id="ControlVoltage_Set2" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(2,this.value)"></td>
+          <td> <input id="ControlVoltage_Set3" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(3,this.value)"></td>
+          <td> <input id="ControlVoltage_Set4" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(4,this.value)"></td>
+          <td> <input id="ControlVoltage_Set5" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(5,this.value)"></td>
+          <td> <input id="ControlVoltage_Set6" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(6,this.value)"></td>
+          <td> <input id="ControlVoltage_Set7" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(7,this.value)"></td>
+          <td> <input id="ControlVoltage_Set8" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(8,this.value)"></td>
         </tr>
 
         <tr>
           <td> Temp_Set [C] </td>
-          <td> <input id="Temp_Set0" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(0,this.value)"> </td>
-          <td> <input id="Temp_Set1" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(1,this.value)"> </td>
-          <td> <input id="Temp_Set2" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(2,this.value)"> </td>
-          <td> <input id="Temp_Set3" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(3,this.value)"> </td>
-          <td> <input id="Temp_Set4" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(4,this.value)"> </td>
-          <td> <input id="Temp_Set5" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(5,this.value)"> </td>
-          <td> <input id="Temp_Set6" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(6,this.value)"> </td>
-          <td> <input id="Temp_Set7" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(7,this.value)"> </td>
-          <td> <input id="Temp_Set8" maxlength="3" size="3" value="wait" onchange="chgTemp_Set(8,this.value)"> </td>
+          <td> <input id="Temp_Set0" maxlength="4" size="4" value="all" onchange="chgTemp_Set(0,this.value)"> </td>
+          <td> <input id="Temp_Set1" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(1,this.value)"> </td>
+          <td> <input id="Temp_Set2" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(2,this.value)"> </td>
+          <td> <input id="Temp_Set3" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(3,this.value)"> </td>
+          <td> <input id="Temp_Set4" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(4,this.value)"> </td>
+          <td> <input id="Temp_Set5" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(5,this.value)"> </td>
+          <td> <input id="Temp_Set6" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(6,this.value)"> </td>
+          <td> <input id="Temp_Set7" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(7,this.value)"> </td>
+          <td> <input id="Temp_Set8" maxlength="4" size="4" value="wait" onchange="chgTemp_Set(8,this.value)"> </td>
         </tr>
        
         <tr>
@@ -159,41 +159,41 @@
 
         <tr>
           <td>PID_kp</td>
-          <td> <input id="PID_kp0" maxlength="3" size="3" onchange="chgPID_kp(0,this.value)"></td>
-          <td> <input id="PID_kp1" maxlength="3" size="3" onchange="chgPID_kp(1,this.value)"></td>
-          <td> <input id="PID_kp2" maxlength="3" size="3" onchange="chgPID_kp(2,this.value)"></td>
-          <td> <input id="PID_kp3" maxlength="3" size="3" onchange="chgPID_kp(3,this.value)"></td>
-          <td> <input id="PID_kp4" maxlength="3" size="3" onchange="chgPID_kp(4,this.value)"></td>
-          <td> <input id="PID_kp5" maxlength="3" size="3" onchange="chgPID_kp(5,this.value)"></td>
-          <td> <input id="PID_kp6" maxlength="3" size="3" onchange="chgPID_kp(6,this.value)"></td>
-          <td> <input id="PID_kp7" maxlength="3" size="3" onchange="chgPID_kp(7,this.value)"></td>
-          <td> <input id="PID_kp8" maxlength="3" size="3" onchange="chgPID_kp(8,this.value)"></td>
+          <td> <input id="PID_kp0" maxlength="4" size="4" onchange="chgPID_kp(0,this.value)"></td>
+          <td> <input id="PID_kp1" maxlength="4" size="4" onchange="chgPID_kp(1,this.value)"></td>
+          <td> <input id="PID_kp2" maxlength="4" size="4" onchange="chgPID_kp(2,this.value)"></td>
+          <td> <input id="PID_kp3" maxlength="4" size="4" onchange="chgPID_kp(3,this.value)"></td>
+          <td> <input id="PID_kp4" maxlength="4" size="4" onchange="chgPID_kp(4,this.value)"></td>
+          <td> <input id="PID_kp5" maxlength="4" size="4" onchange="chgPID_kp(5,this.value)"></td>
+          <td> <input id="PID_kp6" maxlength="4" size="4" onchange="chgPID_kp(6,this.value)"></td>
+          <td> <input id="PID_kp7" maxlength="4" size="4" onchange="chgPID_kp(7,this.value)"></td>
+          <td> <input id="PID_kp8" maxlength="4" size="4" onchange="chgPID_kp(8,this.value)"></td>
         </tr>
 
         <tr>
           <td>PID_ki</td>
-          <td> <input id="PID_ki0" maxlength="3" size="3" onchange="chgPID_ki(0,this.value)"></td>
-          <td> <input id="PID_ki1" maxlength="3" size="3" onchange="chgPID_ki(1,this.value)"></td>
-          <td> <input id="PID_ki2" maxlength="3" size="3" onchange="chgPID_ki(2,this.value)"></td>
-          <td> <input id="PID_ki3" maxlength="3" size="3" onchange="chgPID_ki(3,this.value)"></td>
-          <td> <input id="PID_ki4" maxlength="3" size="3" onchange="chgPID_ki(4,this.value)"></td>
-          <td> <input id="PID_ki5" maxlength="3" size="3" onchange="chgPID_ki(5,this.value)"></td>
-          <td> <input id="PID_ki6" maxlength="3" size="3" onchange="chgPID_ki(6,this.value)"></td>
-          <td> <input id="PID_ki7" maxlength="3" size="3" onchange="chgPID_ki(7,this.value)"></td>
-          <td> <input id="PID_ki8" maxlength="3" size="3" onchange="chgPID_ki(8,this.value)"></td>
+          <td> <input id="PID_ki0" maxlength="4" size="4" onchange="chgPID_ki(0,this.value)"></td>
+          <td> <input id="PID_ki1" maxlength="4" size="4" onchange="chgPID_ki(1,this.value)"></td>
+          <td> <input id="PID_ki2" maxlength="4" size="4" onchange="chgPID_ki(2,this.value)"></td>
+          <td> <input id="PID_ki3" maxlength="4" size="4" onchange="chgPID_ki(3,this.value)"></td>
+          <td> <input id="PID_ki4" maxlength="4" size="4" onchange="chgPID_ki(4,this.value)"></td>
+          <td> <input id="PID_ki5" maxlength="4" size="4" onchange="chgPID_ki(5,this.value)"></td>
+          <td> <input id="PID_ki6" maxlength="4" size="4" onchange="chgPID_ki(6,this.value)"></td>
+          <td> <input id="PID_ki7" maxlength="4" size="4" onchange="chgPID_ki(7,this.value)"></td>
+          <td> <input id="PID_ki8" maxlength="4" size="4" onchange="chgPID_ki(8,this.value)"></td>
         </tr>
 
         <tr>
           <td>PID_kd</td>
-          <td> <input id="PID_kd0" maxlength="3" size="3" onchange="chgPID_kd(0,this.value)"></td>
-          <td> <input id="PID_kd1" maxlength="3" size="3" onchange="chgPID_kd(1,this.value)"></td>
-          <td> <input id="PID_kd2" maxlength="3" size="3" onchange="chgPID_kd(2,this.value)"></td>
-          <td> <input id="PID_kd3" maxlength="3" size="3" onchange="chgPID_kd(3,this.value)"></td>
-          <td> <input id="PID_kd4" maxlength="3" size="3" onchange="chgPID_kd(4,this.value)"></td>
-          <td> <input id="PID_kd5" maxlength="3" size="3" onchange="chgPID_kd(5,this.value)"></td>
-          <td> <input id="PID_kd6" maxlength="3" size="3" onchange="chgPID_kd(6,this.value)"></td>
-          <td> <input id="PID_kd7" maxlength="3" size="3" onchange="chgPID_kd(7,this.value)"></td>
-          <td> <input id="PID_kd8" maxlength="3" size="3" onchange="chgPID_kd(8,this.value)"></td>
+          <td> <input id="PID_kd0" maxlength="4" size="4" onchange="chgPID_kd(0,this.value)"></td>
+          <td> <input id="PID_kd1" maxlength="4" size="4" onchange="chgPID_kd(1,this.value)"></td>
+          <td> <input id="PID_kd2" maxlength="4" size="4" onchange="chgPID_kd(2,this.value)"></td>
+          <td> <input id="PID_kd3" maxlength="4" size="4" onchange="chgPID_kd(3,this.value)"></td>
+          <td> <input id="PID_kd4" maxlength="4" size="4" onchange="chgPID_kd(4,this.value)"></td>
+          <td> <input id="PID_kd5" maxlength="4" size="4" onchange="chgPID_kd(5,this.value)"></td>
+          <td> <input id="PID_kd6" maxlength="4" size="4" onchange="chgPID_kd(6,this.value)"></td>
+          <td> <input id="PID_kd7" maxlength="4" size="4" onchange="chgPID_kd(7,this.value)"></td>
+          <td> <input id="PID_kd8" maxlength="4" size="4" onchange="chgPID_kd(8,this.value)"></td>
         </tr>
 
       </table>
@@ -276,7 +276,8 @@
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
               let tm = 'Mode' + i.toString();
-              document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(0);
+              if (document.activeElement != document.getElementById(tm))
+                  document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(0);
           }
       });
 
@@ -285,7 +286,8 @@
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
               let tm = 'PID_kp' + i.toString();
-              document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
+              if (document.activeElement != document.getElementById(tm))
+                  document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
           }
       });
 
@@ -294,7 +296,8 @@
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
               let tm = 'PID_ki' + i.toString();
-              document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
+              if (document.activeElement != document.getElementById(tm))
+                  document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
           }
       });
 
@@ -303,7 +306,8 @@
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
               let tm = 'PID_kd' + i.toString();
-              document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
+              if (document.activeElement != document.getElementById(tm))
+                  document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
           }
       });
 
@@ -313,7 +317,8 @@
           for (let i = 1; i <= 8; i++) {
               let tm = 'Temp_Set' + i.toString();
               console.log(msg + " => " + parseFloat(vNumbers[i-1]).toFixed(2)); 
-              document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
+              if (document.activeElement != document.getElementById(tm))
+                  document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
           }
       });
 
