--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -204,7 +204,7 @@
       let checkedTEC = -1;
 
       //      <audio id="houston" src="houstonwehaveaproblem_loud.mp3" preload="auto"></audio>
-      const audio = new Audio("houstonwehaveaproblem_loud.mp3");
+      //      const audio = new Audio("houstonwehaveaproblem_loud.mp3");
       
       const socket = io();
       const valve0 = document.getElementById('valve0');
