in time show minutes, not months

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -432,7 +432,7 @@
           if (mi < 10) mi = '0' + mi;
           var ss = x.getSeconds();
           if (ss < 10) ss = '0' + ss;
-          return yy + "/" + mm + "/" + dd + " " + hh + ":" + mm + ":" + ss + ">";
+          return yy + "/" + mm + "/" + dd + " " + hh + ":" + mi + ":" + ss + ">";
       }
 
       let mycolors = [];
