right-align table numbers

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -29,19 +29,19 @@
         <table>
           <tr>
             <td>Air</td>
-            <td id="TempAir">0 </td>
+            <td id="TempAir" style="text-align:right;">0 </td>
           </tr>
           <tr>
             <td>Water</td>
-            <td id="TempWater">0 </td>
+            <td id="TempWater" style="text-align:right;">0 </td>
           </tr>
           <tr>
             <td>Rel. Humidity</td>
-            <td id="RelHum">0 </td>
+            <td id="RelHum" style="text-align:right;">0 </td>
           </tr>
           <tr>
             <td>Dew point</td>
-            <td id="DP">0 </td>
+            <td id="DP" style="text-align:right;">0 </td>
           </tr>
         </table>
       </div>
@@ -50,15 +50,15 @@
         <table>
           <tr>
             <td>I2C Errors</td>
-            <td id="I2CErrors">0 </td>
+            <td id="I2CErrors style="text-align:right;"">0 </td>
           </tr>
           <tr>
             <td>CANbus errors</td>
-            <td id="CANbusErrors">0 </td>
+            <td id="CANbusErrors style="text-align:right;"">0 </td>
           </tr>
           <tr>
             <td>Run time</td>
-            <td id="RunTime">0 </td>
+            <td id="RunTime style="text-align:right;"">0 </td>
           </tr>
         </table>
       </div>
