--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -50,15 +50,15 @@
         <table>
           <tr>
             <td>I2C Errors</td>
-            <td id="I2CErrors style="text-align:right;"">0 </td>
+            <td id="I2CErrors" style="text-align:right;">0 </td>
           </tr>
           <tr>
             <td>CANbus errors</td>
-            <td id="CANbusErrors style="text-align:right;"">0 </td>
+            <td id="CANbusErrors" style="text-align:right;">0 </td>
           </tr>
           <tr>
             <td>Run time</td>
-            <td id="RunTime style="text-align:right;"">0 </td>
+            <td id="RunTime" style="text-align:right;">0 </td>
           </tr>
         </table>
       </div>
