aesthetics of N2 buttons

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -21,8 +21,9 @@
     <div class="mycontainer">
   
       <div style="background-color:DodgerBlue" float="left">
-        <button id="valve0" style="background-color:#FCF5E5">Valve0</button> 
-        <button id="valve1" style="background-color:#FCF5E5">Valve1</button> 
+        <b>Nitrogen control: </b>
+        <button id="valve0" style="background-color:#FCF5E5">Flush</button> 
+        <button id="valve1" style="background-color:#FCF5E5">Rinse</button> 
       </div>
       
       <div style="background-color:MediumSeaGreen" float="center">
