try to get PID_X to transmit something

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -125,7 +125,7 @@
 
         <tr>
           <td> Temp_Set [C] </td>
-          <td> <input id="Temp_Set0" maxlength="4" size="5" value="all" onchange="chgTemp_Set(0,this.value)"> </td>
+          <td> <input id="Temp_Set0" maxlength="4" size="5" value="all"  onchange="chgTemp_Set(0,this.value)"> </td>
           <td> <input id="Temp_Set1" maxlength="4" size="5" value="wait" onchange="chgTemp_Set(1,this.value)"> </td>
           <td> <input id="Temp_Set2" maxlength="4" size="5" value="wait" onchange="chgTemp_Set(2,this.value)"> </td>
           <td> <input id="Temp_Set3" maxlength="4" size="5" value="wait" onchange="chgTemp_Set(3,this.value)"> </td>
@@ -242,41 +242,41 @@
 
         <tr>
           <td>PID_kp</td>
-          <td> <input id="PID_kp0" maxlength="4" size="4" onchange="chgPID_kp(0,this.value)"></td>
-          <td> <input id="PID_kp1" maxlength="4" size="4" onchange="chgPID_kp(1,this.value)"></td>
-          <td> <input id="PID_kp2" maxlength="4" size="4" onchange="chgPID_kp(2,this.value)"></td>
-          <td> <input id="PID_kp3" maxlength="4" size="4" onchange="chgPID_kp(3,this.value)"></td>
-          <td> <input id="PID_kp4" maxlength="4" size="4" onchange="chgPID_kp(4,this.value)"></td>
-          <td> <input id="PID_kp5" maxlength="4" size="4" onchange="chgPID_kp(5,this.value)"></td>
-          <td> <input id="PID_kp6" maxlength="4" size="4" onchange="chgPID_kp(6,this.value)"></td>
-          <td> <input id="PID_kp7" maxlength="4" size="4" onchange="chgPID_kp(7,this.value)"></td>
-          <td> <input id="PID_kp8" maxlength="4" size="4" onchange="chgPID_kp(8,this.value)"></td>
+          <td> <input id="PID_kp0" maxlength="4" size="4" value="all"  onchange="chgPID_kp(0,this.value)"></td>
+          <td> <input id="PID_kp1" maxlength="4" size="4" value="wait" onchange="chgPID_kp(1,this.value)"></td>
+          <td> <input id="PID_kp2" maxlength="4" size="4" value="wait" onchange="chgPID_kp(2,this.value)"></td>
+          <td> <input id="PID_kp3" maxlength="4" size="4" value="wait" onchange="chgPID_kp(3,this.value)"></td>
+          <td> <input id="PID_kp4" maxlength="4" size="4" value="wait" onchange="chgPID_kp(4,this.value)"></td>
+          <td> <input id="PID_kp5" maxlength="4" size="4" value="wait" onchange="chgPID_kp(5,this.value)"></td>
+          <td> <input id="PID_kp6" maxlength="4" size="4" value="wait" onchange="chgPID_kp(6,this.value)"></td>
+          <td> <input id="PID_kp7" maxlength="4" size="4" value="wait" onchange="chgPID_kp(7,this.value)"></td>
+          <td> <input id="PID_kp8" maxlength="4" size="4" value="wait" onchange="chgPID_kp(8,this.value)"></td>
         </tr>
 
         <tr>
           <td>PID_ki</td>
-          <td> <input id="PID_ki0" maxlength="4" size="4" onchange="chgPID_ki(0,this.value)"></td>
-          <td> <input id="PID_ki1" maxlength="4" size="4" onchange="chgPID_ki(1,this.value)"></td>
-          <td> <input id="PID_ki2" maxlength="4" size="4" onchange="chgPID_ki(2,this.value)"></td>
-          <td> <input id="PID_ki3" maxlength="4" size="4" onchange="chgPID_ki(3,this.value)"></td>
-          <td> <input id="PID_ki4" maxlength="4" size="4" onchange="chgPID_ki(4,this.value)"></td>
-          <td> <input id="PID_ki5" maxlength="4" size="4" onchange="chgPID_ki(5,this.value)"></td>
-          <td> <input id="PID_ki6" maxlength="4" size="4" onchange="chgPID_ki(6,this.value)"></td>
-          <td> <input id="PID_ki7" maxlength="4" size="4" onchange="chgPID_ki(7,this.value)"></td>
-          <td> <input id="PID_ki8" maxlength="4" size="4" onchange="chgPID_ki(8,this.value)"></td>
+          <td> <input id="PID_ki0" maxlength="4" size="4" value="all"  onchange="chgPID_ki(0,this.value)"></td>
+          <td> <input id="PID_ki1" maxlength="4" size="4" value="wait" onchange="chgPID_ki(1,this.value)"></td>
+          <td> <input id="PID_ki2" maxlength="4" size="4" value="wait" onchange="chgPID_ki(2,this.value)"></td>
+          <td> <input id="PID_ki3" maxlength="4" size="4" value="wait" onchange="chgPID_ki(3,this.value)"></td>
+          <td> <input id="PID_ki4" maxlength="4" size="4" value="wait" onchange="chgPID_ki(4,this.value)"></td>
+          <td> <input id="PID_ki5" maxlength="4" size="4" value="wait" onchange="chgPID_ki(5,this.value)"></td>
+          <td> <input id="PID_ki6" maxlength="4" size="4" value="wait" onchange="chgPID_ki(6,this.value)"></td>
+          <td> <input id="PID_ki7" maxlength="4" size="4" value="wait" onchange="chgPID_ki(7,this.value)"></td>
+          <td> <input id="PID_ki8" maxlength="4" size="4" value="wait" onchange="chgPID_ki(8,this.value)"></td>
         </tr>
 
         <tr>
           <td>PID_kd</td>
-          <td> <input id="PID_kd0" maxlength="4" size="4" onchange="chgPID_kd(0,this.value)"></td>
-          <td> <input id="PID_kd1" maxlength="4" size="4" onchange="chgPID_kd(1,this.value)"></td>
-          <td> <input id="PID_kd2" maxlength="4" size="4" onchange="chgPID_kd(2,this.value)"></td>
-          <td> <input id="PID_kd3" maxlength="4" size="4" onchange="chgPID_kd(3,this.value)"></td>
-          <td> <input id="PID_kd4" maxlength="4" size="4" onchange="chgPID_kd(4,this.value)"></td>
-          <td> <input id="PID_kd5" maxlength="4" size="4" onchange="chgPID_kd(5,this.value)"></td>
-          <td> <input id="PID_kd6" maxlength="4" size="4" onchange="chgPID_kd(6,this.value)"></td>
-          <td> <input id="PID_kd7" maxlength="4" size="4" onchange="chgPID_kd(7,this.value)"></td>
-          <td> <input id="PID_kd8" maxlength="4" size="4" onchange="chgPID_kd(8,this.value)"></td>
+          <td> <input id="PID_kd0" maxlength="4" size="4" value="all"  onchange="chgPID_kd(0,this.value)"></td>
+          <td> <input id="PID_kd1" maxlength="4" size="4" value="wait" onchange="chgPID_kd(1,this.value)"></td>
+          <td> <input id="PID_kd2" maxlength="4" size="4" value="wait" onchange="chgPID_kd(2,this.value)"></td>
+          <td> <input id="PID_kd3" maxlength="4" size="4" value="wait" onchange="chgPID_kd(3,this.value)"></td>
+          <td> <input id="PID_kd4" maxlength="4" size="4" value="wait" onchange="chgPID_kd(4,this.value)"></td>
+          <td> <input id="PID_kd5" maxlength="4" size="4" value="wait" onchange="chgPID_kd(5,this.value)"></td>
+          <td> <input id="PID_kd6" maxlength="4" size="4" value="wait" onchange="chgPID_kd(6,this.value)"></td>
+          <td> <input id="PID_kd7" maxlength="4" size="4" value="wait" onchange="chgPID_kd(7,this.value)"></td>
+          <td> <input id="PID_kd8" maxlength="4" size="4" value="wait" onchange="chgPID_kd(8,this.value)"></td>
         </tr>
 
       </table>
@@ -521,35 +521,35 @@
       
       function chgControlVoltage_Set(itec, val) {
           let msg = "tec " + itec.toString() + " set ControlVoltage_Set " + val.toString();
-          console.log("controlvoltage_set" + msg);
+          console.log("controlvoltage_set: " + msg);
           socket.emit('controlvoltage_set', msg);
       }
 
       function chgTemp_Set(itec, val) {
           let msg = "tec " + itec.toString() + " set Temp_Set " + val.toString();
-          console.log("temp_set" + msg);
+          console.log("temp_set: " + msg);
           socket.emit('temp_set', msg);
       }
 
       function chgMode(itec, val) {
           let msg = "tec " + itec.toString() + " set Mode " + val.toString();
-          console.log("mode_set" + msg);
+          console.log("mode_set: " + msg);
           socket.emit('mode_set', msg);
       }
 
       function chgPID_kp(itec, val) {
           let msg = "tec " + itec.toString() + " set PID_kp " + val.toString();
-          console.log("pid_kp" + msg);
+          console.log("pid_kp: " + msg);
           socket.emit('pid_kp', msg);
       }
       function chgPID_ki(itec, val) {
           let msg = "tec " + itec.toString() + " set PID_ki " + val.toString();
-          console.log("pid_ki" + msg);
+          console.log("pid_ki: " + msg);
           socket.emit('pid_ki', msg);
       }
       function chgPID_kp(itec, val) {
           let msg = "tec " + itec.toString() + " set PID_kd " + val.toString();
-          console.log("pid_kd" + msg);
+          console.log("pid_kd: " + msg);
           socket.emit('pid_kd', msg);
       }
 
