add all to Mode as well

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -99,20 +99,20 @@
 
         <tr>
           <td>Mode (0=T, 1=V)</td>
-          <td> <input id="Mode0" maxlength="3" size="3" onchange="chgMode(0,this.value)"></td>
-          <td> <input id="Mode1" maxlength="3" size="3" onchange="chgMode(1,this.value)"></td>
-          <td> <input id="Mode2" maxlength="3" size="3" onchange="chgMode(2,this.value)"></td>
-          <td> <input id="Mode3" maxlength="3" size="3" onchange="chgMode(3,this.value)"></td>
-          <td> <input id="Mode4" maxlength="3" size="3" onchange="chgMode(4,this.value)"></td>
-          <td> <input id="Mode5" maxlength="3" size="3" onchange="chgMode(5,this.value)"></td>
-          <td> <input id="Mode6" maxlength="3" size="3" onchange="chgMode(6,this.value)"></td>
-          <td> <input id="Mode7" maxlength="3" size="3" onchange="chgMode(7,this.value)"></td>
-          <td> <input id="Mode8" maxlength="3" size="3" onchange="chgMode(8,this.value)"></td>
+          <td> <input id="Mode0" maxlength="3" size="3" value="all"  onchange="chgMode(0,this.value)"></td>
+          <td> <input id="Mode1" maxlength="3" size="3" value="wait" onchange="chgMode(1,this.value)"></td>
+          <td> <input id="Mode2" maxlength="3" size="3" value="wait" onchange="chgMode(2,this.value)"></td>
+          <td> <input id="Mode3" maxlength="3" size="3" value="wait" onchange="chgMode(3,this.value)"></td>
+          <td> <input id="Mode4" maxlength="3" size="3" value="wait" onchange="chgMode(4,this.value)"></td>
+          <td> <input id="Mode5" maxlength="3" size="3" value="wait" onchange="chgMode(5,this.value)"></td>
+          <td> <input id="Mode6" maxlength="3" size="3" value="wait" onchange="chgMode(6,this.value)"></td>
+          <td> <input id="Mode7" maxlength="3" size="3" value="wait" onchange="chgMode(7,this.value)"></td>
+          <td> <input id="Mode8" maxlength="3" size="3" value="wait" onchange="chgMode(8,this.value)"></td>
         </tr>
 
         <tr>
           <td>ControlVoltage_Set [V]</td>
-          <td> <input id="ControlVoltage_Set0" maxlength="4" size="4" value="all" onchange="chgControlVoltage_Set(0,this.value)"></td>
+          <td> <input id="ControlVoltage_Set0" maxlength="4" size="4" value="all"  onchange="chgControlVoltage_Set(0,this.value)"></td>
           <td> <input id="ControlVoltage_Set1" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(1,this.value)"></td>
           <td> <input id="ControlVoltage_Set2" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(2,this.value)"></td>
           <td> <input id="ControlVoltage_Set3" maxlength="4" size="4" value="wait" onchange="chgControlVoltage_Set(3,this.value)"></td>
