increase line spacing

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -15,6 +15,10 @@
       .mycontainer > div {
           width:33.33%;
       }
+      br {
+          display: block;
+          margin: 10px 0;
+      }
     </style>
   </head>
   <body>
