--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -328,7 +328,6 @@
       socket.on('valve1white', (msg) => {valve1.style.background='#FCF5E5'; });
 
       socket.on('envString', (msg) => {
-
           const snumbers = msg.toString().replace('Env = ', '');
           const vNumbers = snumbers.split(', ');
           document.getElementById('TempAir').innerHTML = parseFloat(vNumbers[0]).toFixed(2);
@@ -527,6 +526,10 @@
           logarea.scrollTop = logarea.scrollHeight;
 
           houston.play();
+      });
+
+      socket.on('putcsv', (msg) => {
+          console.log(msg.toString());
       });
 
       function chgControlVoltage_Set(itec, val) {
