--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -529,6 +529,7 @@
       });
 
       socket.on('putcsv', (msg) => {
+          console.log('hallo got putcsv');
           console.log(msg.toString());
       });
 
