--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -36,7 +36,7 @@
       <div style="background-color:MediumSeaGreen" float="center">
         <table>
           <tr>
-            <td>Air</td>
+            <td>Air2</td>
             <td id="TempAir" style="text-align:right;">0 </td>
           </tr>
           <tr>
