--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -34,9 +34,13 @@
       </div>
 
       <div style="background-color:MediumSeaGreen" float="center">
+        Hallo
+      </div>
+
+      <div style="background-color:MediumSeaGreen" float="center">
         <table>
           <tr>
-            <td>Air2</td>
+            <td>Air</td>
             <td id="TempAir" style="text-align:right;">0 </td>
           </tr>
           <tr>
